fixed chat overflow error

--- a/public/main.css
+++ b/public/main.css
@@ -189,7 +189,7 @@ html, body {
     width: 30%;
     background-color: rgb(255, 255, 255);
     border: 3px solid #000;
-    /* position: absolute; */
+
     position: relative;
     text-align: center;
     padding: 10px;
@@ -198,7 +198,7 @@ html, body {
     display:none;
 
     text-align: left;
-    /* visibility: hidden; */
+    overflow-y: auto;
 }
 
 #icon {
